1dcnn, LSTM Mid, and LSTM small.

--- a/V10_RCT_Vector/PMC_Vectorization_LSTM.ipynb
+++ b/V10_RCT_Vector/PMC_Vectorization_LSTM.ipynb
@@ -423,9 +423,9 @@
    "outputs": [],
    "source": [
     "model_json = model.to_json()\n",
-    "with open (\"LSTMModel.json\", \"w\") as json_file:\n",
+    "with open (\"Models/LSTMModel.json\", \"w\") as json_file:\n",
     "    json_file.write(model_json)\n",
-    "model.save_weights(\"LSTMModel.h5\")"
+    "model.save_weights(\"Models/LSTMModel.h5\")"
    ]
   },
   {
@@ -464,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
