--- a/V10_RCT_Vector/PMC_Vectorization_cnn_ROBOT.ipynb
+++ b/V10_RCT_Vector/PMC_Vectorization_cnn_ROBOT.ipynb
@@ -6,13 +6,21 @@
    "source": [
     "# Summary\n",
     "\n",
-    "Thanks for Dave to share the great PMC vectorization file: http://evexdb.org/pmresources/vec-space-models/\n",
+    "Apply Iain Marshall's CNN on our dataset. The CNN structure is defined in the https://onlinelibrary.wiley.com/doi/abs/10.1002/jrsm.1287\n",
     "\n",
-    "Pretrained embedding layer loaded\n",
+    "Pretrained embedding layer loaded from Iain.\n",
     "\n",
-    "A small LSTM with lower RNN drop out.\n",
+    "Hyper parameters used:\n",
     "\n",
-    "Smaller sequence length."
+    "Dropout: 0.160\n",
+    "Filter sizes: 1, 3, 5\n",
+    "Number of additional hidden layers: 0\n",
+    "Number of filters: 150\n",
+    "Maximum token features: 20000 rather than 12500\n",
+    "Number of epochs: rather than 20\n",
+    "Keep Normalization and drop for each Convolution layer.\n",
+    "\n",
+    "Result: Precision 82%, recall 82% F1 81%"
    ]
   },
   {
@@ -142,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2 LSTM"
+    "# 2 CNN by Iain Marshall"
    ]
   },
   {
@@ -152,29 +160,6 @@
    "outputs": [],
    "source": [
     "def model():\n",
-    "        \n",
-    "    sequence_input = Input(shape=(MAX_SEQUENCE_LENGTH,), dtype='int32')\n",
-    "    embedded_sequences = embedding_layer(sequence_input)\n",
-    "    \n",
-    "    # Cov layer\n",
-    "    X = Conv1D(filters=256, kernel_size=15, strides=4)(embedded_sequences)                                 # CONV1D\n",
-    "    X = BatchNormalization()(X)                                 # Batch normalization\n",
-    "    X = Activation('relu')(X)                                 # ReLu activation\n",
-    "    X = Dropout(0.6)(X)                                 # dropout\n",
-    "    \n",
-    "    # LSTM layer 1\n",
-    "    X = LSTM(32, return_sequences=True, recurrent_dropout = 0.5)(X)\n",
-    "    X = Dropout(0.5)(X)\n",
-    "    \n",
-    "    # LSTM layer 2 \n",
-    "    X = LSTM(32, recurrent_dropout = 0.5)(X)\n",
-    "    X = Dropout(0.5)(X)\n",
-    "    \n",
-    "    X = Dense(2)(X)  \n",
-    "    # Softmax layer\n",
-    "    X = Activation('softmax')(X)\n",
-    "    \n",
-    "    \n",
     "    # train a 1D convnet with global maxpooling\n",
     "    sequence_input = Input(shape=(MAX_SEQUENCE_LENGTH,), dtype='int32')\n",
     "    embedded_sequences = embedding_layer(sequence_input)\n",
@@ -206,7 +191,17 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/dc/anaconda3/envs/tensorflow/lib/python3.6/site-packages/tensorflow/python/util/deprecation.py:497: calling conv1d (from tensorflow.python.ops.nn_ops) with data_format=NHWC is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "`NHWC` for data_format is deprecated, use `NWC` instead\n"
+     ]
+    }
+   ],
    "source": [
     "model = model()"
    ]
@@ -223,37 +218,37 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_2 (InputLayer)         (None, 1000)              0         \n",
+      "input_1 (InputLayer)         (None, 1000)              0         \n",
       "_________________________________________________________________\n",
       "embedding_1 (Embedding)      (None, 1000, 200)         4000000   \n",
       "_________________________________________________________________\n",
-      "conv1d_2 (Conv1D)            (None, 1000, 150)         30150     \n",
+      "conv1d_1 (Conv1D)            (None, 1000, 150)         30150     \n",
       "_________________________________________________________________\n",
-      "batch_normalization_2 (Batch (None, 1000, 150)         600       \n",
+      "batch_normalization_1 (Batch (None, 1000, 150)         600       \n",
       "_________________________________________________________________\n",
-      "dropout_4 (Dropout)          (None, 1000, 150)         0         \n",
+      "dropout_1 (Dropout)          (None, 1000, 150)         0         \n",
       "_________________________________________________________________\n",
       "max_pooling1d_1 (MaxPooling1 (None, 1000, 150)         0         \n",
       "_________________________________________________________________\n",
-      "conv1d_3 (Conv1D)            (None, 998, 150)          67650     \n",
+      "conv1d_2 (Conv1D)            (None, 998, 150)          67650     \n",
       "_________________________________________________________________\n",
-      "batch_normalization_3 (Batch (None, 998, 150)          600       \n",
+      "batch_normalization_2 (Batch (None, 998, 150)          600       \n",
       "_________________________________________________________________\n",
-      "dropout_5 (Dropout)          (None, 998, 150)          0         \n",
+      "dropout_2 (Dropout)          (None, 998, 150)          0         \n",
       "_________________________________________________________________\n",
       "max_pooling1d_2 (MaxPooling1 (None, 332, 150)          0         \n",
       "_________________________________________________________________\n",
-      "conv1d_4 (Conv1D)            (None, 328, 150)          112650    \n",
+      "conv1d_3 (Conv1D)            (None, 328, 150)          112650    \n",
       "_________________________________________________________________\n",
-      "batch_normalization_4 (Batch (None, 328, 150)          600       \n",
+      "batch_normalization_3 (Batch (None, 328, 150)          600       \n",
       "_________________________________________________________________\n",
-      "dropout_6 (Dropout)          (None, 328, 150)          0         \n",
+      "dropout_3 (Dropout)          (None, 328, 150)          0         \n",
       "_________________________________________________________________\n",
       "max_pooling1d_3 (MaxPooling1 (None, 65, 150)           0         \n",
       "_________________________________________________________________\n",
       "global_max_pooling1d_1 (Glob (None, 150)               0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 2)                 302       \n",
+      "dense_1 (Dense)              (None, 2)                 302       \n",
       "=================================================================\n",
       "Total params: 4,212,552\n",
       "Trainable params: 211,652\n",
@@ -264,6 +259,23 @@
    ],
    "source": [
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.utils import plot_model\n",
+    "plot_model(model, to_file='cnnROBOT.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='cnnROBOT.png'>"
    ]
   },
   {
@@ -420,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
